crates/parser/tests/snapshots/block_string_gen_literal_strip_simple_eof_nonl.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-gen-literal-strip-simple-eof-nonl

## Input

```
key |-
  a
  b
```

## CST

```
SOURCE_FILE@0..14
  ENTRY@0..14
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..14
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..10
        STRING@9..10 "a"
      NEWLINE@10..11 "\n"
      SPACE@11..13 "  "
      LINE_STRING@13..14
        STRING@13..14 "b"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: MINUS@5..6 "-",
                },
                lines: [
                    LineString {
                        string: STRING@9..10 "a",
                    },
                    LineString {
                        string: STRING@13..14 "b",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
